Bug 325937 - Make selected part more visible
On GTK:
* Put more "light" on selected part (introduce a shade of grey for
others)
* Remove light on inactive part stack (no white, only greys)
* Remove gradients to remove the "relief" feeling that conflicts with
the light pattern.
On Windows:
* reduce contrast on inactive tab gradient
* reduce contrast between inactive tab and unselected inactive tabs by the use of a light blue background color

Also-By: Frank Appel <fappel@codeaffine.com>

--- a/bundles/org.eclipse.ui.themes/css/e4_basestyle.css
+++ b/bundles/org.eclipse.ui.themes/css/e4_basestyle.css
@@ -110,7 +110,8 @@ ColorDefinition#org-eclipse-ui-workbench-ACTIVE_NOFOCUS_TAB_BG_END {
 }
 
 ColorDefinition#org-eclipse-ui-workbench-ACTIVE_NOFOCUS_TAB_TEXT_COLOR {
-	color: #000000;
+	/* Never use black */
+	color: #101010;
 }
 
 .MTrimmedWindow.topLevel {
